kubeadm/glasslab-v2/rabbitmq/40-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: glasslab-rabbitmq
  namespace: glasslab-v2
  labels:
    app.kubernetes.io/name: glasslab-rabbitmq
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: glasslab-rabbitmq
  ports:
    - name: amqp
      port: 5672
      targetPort: amqp
      protocol: TCP
